crates/sakka-test/tests/trybuild/ignore_with_custom_encoding.stderr
error: Cannot use #[sakka(ignore)] with #[sakka(decode_with(...))] or #[sakka(encode_with(...))]
  --> tests/trybuild/ignore_with_custom_encoding.rs:13:5
   |
13 | /     #[sakka(ignore, encode_with = encode_u8)]
14 | |     value: u8,
   | |_____________^

error: Cannot use #[sakka(ignore)] with #[sakka(decode_with(...))] or #[sakka(encode_with(...))]
  --> tests/trybuild/ignore_with_custom_encoding.rs:19:5
   |
19 | /     #[sakka(ignore, decode_with = decode_u8)]
20 | |     value: u8,
   | |_____________^
